--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -569,6 +569,69 @@ ul,ol,dl {
 .google {
     color:#fb6e61;
 }
+.comment-placeholder{
+    padding: 20px 0 30px 0;
+}
+.comment-placeholder .author{
+    margin-bottom: 15px;
+}
+.comment-placeholder .author .avatar{
+    background: #eaeaea;
+    border-radius: 50%;
+}
+.comment-placeholder .author .info{
+    display: inline-block;
+}
+.comment-placeholder .author .info .name{
+    width: 60px;
+    height: 15px;
+    margin-bottom: 6px;
+    background:#eaeaea;
+}
+.comment-placeholder .author .info .meta{
+    background: #eaeaea;
+    width: 120px;
+    height: 12px;
+}
+.comment-placeholder .title{
+    width: 100%;
+    height: 16px;
+    background: #eaeaea;
+    margin-bottom: 8px;
+    animation: loading 1s ease-in-out infinite;
+}
+.comment-placeholder .animated-delay{
+    animation: loading 1s  ease-in-out -.5s infinite;
+}
+@keyframes loading {
+    0%{
+        width: 60%;
+    }
+    50%{
+        width: 100%;
+    }
+    100%{
+        width: 60%;
+    }
+
+}
+
+.comment-placeholder .tool-group{
+    font-size: 15px;
+    color: #eaeaea;
+    padding-top: 6px;
+}
+.comment-placeholder .tool-group i{
+    margin-right: 5px;
+}
+.comment-placeholder .tool-group .zan,
+.comment-placeholder .tool-group .like{
+    height: 14px;
+    width: 40px;
+    margin-right: 10px;
+    display: inline-block;
+    background: #eaeaea;
+}
 
 
 
